test/e2e/fail/002-type-alias-mismatch/expected.stderr
error[E0001]: type mismatch
 --> $FILE:2:1
  |
2 | let p: Pair<Int, Int> = { first: "hello", second: 2 };
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Int`, found `String`
  |
